--- a/config.yaml
+++ b/config.yaml
@@ -7,8 +7,8 @@ mysql:
   addr: 127.0.0.1
   port: 3306
   user: xu756
-  password: xjx756756
-  db: bridge
+  password: a123456
+  db: goserver
 mongo:
   addr:
   user:
