--- a/app/user/api/etc/user-api.yaml
+++ b/app/user/api/etc/user-api.yaml
@@ -5,8 +5,8 @@ Verbose: true
 Auth:
   AccessSecret: user123456
   AccessExpire: 85400
-Mysql:
-  DataSource: xu756:123456@tcp(127.0.0.1:3306)/appserver?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
-Cache:
-  - Host: 127.0.0.1:6379
-    Pass:
+UserRpc:
+  Etcd:
+    Hosts:
+      - 127.0.0.1:2379
+    Key: userrpc.rpc
